Did some of the major heavy-lifting to provide items that directly corrolate to unlocking particular elements.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -382,13 +382,17 @@ properties: {
 		#####-- item lists --#####
 	ability_list_full: "[InventoryItemType] :: map(filter(item_list_complete, value.item_category = enum primary_ability), value.id)",
 
-	ability_list: "[InventoryItemType] :: map(filter(items_carried, value.item_category = enum primary_ability), value.id)",
+	element_list: "[ItemElementType] :: filter(map(filter(items_carried, value.item_category = enum core_element), value.item_element_type), value != null)",
+
+
+
+	regular_ability_list: "[InventoryItemType] :: [enum item_tongue] + map(regulars_available_to_player, value.id)
+		where regulars_available_to_player = filter( all_regular_abilities, value.item_element_type in elements_owned_by_player)
+		where all_regular_abilities = filter(item_list_complete, value.item_category = enum primary_ability)",
 
 
 
 	super_ability_list_full: "[InventoryItemType] :: [enum item_tongue] + map(filter(item_list_complete, value.item_category = enum super_ability), value.id)",
-
-	//super_ability_list: "[InventoryItemType] :: [enum item_tongue] + map(filter(items_carried, value.item_category = enum super_ability), value.id)",
 
 	super_ability_list: "[InventoryItemType] :: [enum item_tongue] + map(supers_available_to_player, value.id)
 		where supers_available_to_player = filter( all_super_abilities, value.item_element_type in elements_owned_by_player)
@@ -416,7 +420,7 @@ properties: {
 
 
 	
-	elements_owned_by_player: "[ItemElementType] :: unique(filter(map(ability_list, item_info(value).item_element_type), value != null))",
+	elements_owned_by_player: "[ItemElementType] :: unique(element_list)",
 
 	null_item: "class inventory_item :: find_or_die(item_list_complete, value.id = enum item_null)",
 
@@ -439,10 +443,10 @@ properties: {
 								)
 
 			where the_item_list = switch(category,
-												enum super_ability, 		ability_list,
+												enum super_ability, 		regular_ability_list,
 												enum secondary_item,		secondary_item_list,
 												enum underwater_ability,	underwater_ability_list,
-																			ability_list
+																			regular_ability_list
 											)
 			where the_current_item = switch(category,
 												enum super_ability, 		current_ability,
@@ -548,7 +552,7 @@ properties: {
 				where the_item_list = switch(category,
 													enum secondary_item,		secondary_item_list,
 													enum underwater_ability,	underwater_ability_list,
-																				ability_list
+																				regular_ability_list
 												)
 				where set_current_item = 	def(InventoryItemType target_item) -> commands
 											switch(category,
