--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -58,9 +58,9 @@
 			*/
 			start_val
 			:
-			start_val + min( size(player.ability_list), 5 )
+			start_val + min( size(player.regular_ability_list), 5 )
 		] where start_val = max(0,
-			lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
+			lib.math.floor( (5 - size(player.regular_ability_list)) / 2.0 )
 		)",
 
 		set_to_animation: "def(obj hud_component target, [int,int,int,int] rect) -> commands
