--- a/data/objects/gui-components/inventory-screen/status_pane_old.cfg
+++ b/data/objects/gui-components/inventory-screen/status_pane_old.cfg
@@ -85,7 +85,7 @@ properties: {
 			set(txt.relative_y, 135),
 		] where txt = status_panel_text_display,
 		
-		map(frogatto.ability_list, 'ability_name',
+		map(frogatto.regular_ability_list, 'ability_name',
 			add_object(object('${me.type}.status_pane_ability_display', 0, 0, 1, {
 				animation: ability_name + if(frogatto.current_ability_name = ability_name, '_active', ''),
 				parent: me,
