--- a/data/types.cfg
+++ b/data/types.cfg
@@ -62,6 +62,11 @@
 		item_magic_map,
 		item_creature_field_guide,
 		
+		item_fire_element,
+		item_energy_element,
+		item_arcane_element,
+		item_acid_element,
+		
 		item_tongue,
 		item_fire_breath_talisman,
 		item_fire_shot_talisman,
