Updated the hax command to grant the player the element items instead of giving them the direct ability items.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -256,7 +256,7 @@
 	},
 	{
 		name: "~Lurid Wash~",
-		id: "@eval enum item_super_acid_pendant",
+		id: "@eval enum item_acid_element",
 		description: "~The essence of nature's fecund and plasmic qualities.~",
 		short_store_description: "[~Gives you the ability to conjure acid.~]",
 		costs_trophies_instead_of_coins: true,
