--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -308,7 +308,7 @@ properties: {
 
 
 	hax_nene: "[  /* just finished nene's basement quest */
-		;set_item_amount(enum item_fire_breath_talisman, 1),
+		;set_item_amount(enum item_fire_element, 1),
 		;add(levels_visited, ['frogatto-grotto.cfg', 'to-nenes-house.cfg']),
 		;store_event('talked_to_nene', 1),
 		;store_event('nenes_treasure_chest_unlocked', 1),
@@ -333,7 +333,7 @@ properties: {
         
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 4), //unlike `hax_tempo`, we're assuming you haven't hunted around and bought extra hearts.
-		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_fire_element, 1),
 		
 		store_event('town_elder_fight_won',1),
 		store_event('town_elder_post_fight_speech',1),
@@ -344,7 +344,7 @@ properties: {
         ;add(levels_visited, ['foreboding-forest.cfg', 'rustic-route.cfg']),
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 5), //we assume you've gotten the hearts from the airplane boss, from ralph, and also probably found or bought one extra one.
-		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_fire_element, 1),
 	]",
 
 	
@@ -354,8 +354,8 @@ properties: {
         ;add(levels_visited, ['musty-mine.cfg']),
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 5),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_fire_element, 1),
+		;add_item(enum item_energy_element, 1),
 
 		store_event('introduced_to_imoti', 1),
 		store_event('frogatto_has_seen_tempo_village_force_field', 1),
@@ -374,8 +374,8 @@ properties: {
 		;set_item_amount(enum item_magic_map, 1),
 //		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 5),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_fire_element, 1),
+		;add_item(enum item_energy_element, 1),
 
 
 		store_event('finished_post_gazer_boss_conversation',1),
@@ -393,9 +393,9 @@ properties: {
 		;set_item_amount(enum item_magic_map, 1),
 //		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
-		;add_item(enum item_homing_shot_talisman, 1),
+		;add_item(enum item_fire_element, 1),
+		;add_item(enum item_energy_element, 1),
+		;add_item(enum item_arcane_element, 1),
 
 		store_event('moth_boss_fight_won',1),
 		store_event('moth_boss_postfight_dialogue',1),
@@ -409,9 +409,9 @@ properties: {
 		;set_item_amount(enum item_magic_map, 1),
 //		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
-		;add_item(enum item_fire_breath_talisman, 1),
-		;add_item(enum item_energy_shot_talisman, 1),
-		;add_item(enum item_acid_breath_talisman, 1),
+		;add_item(enum item_fire_element, 1),
+		;add_item(enum item_energy_element, 1),
+		;add_item(enum item_acid_element, 1),
 		
 		store_event('mushroom_boss_fight_won',1),
 		store_event('missing_berd_post_mushroom_boss_speech',1),
@@ -464,6 +464,26 @@ properties: {
 		;add_item(enum item_acquirable_attractor, 1),
 
 
+		;add_item(enum item_fire_element, 1),
+		;add_item(enum item_energy_element, 1),
+		;add_item(enum item_acid_element, 1),
+		;add_item(enum item_arcane_element, 1),
+
+		add_item(enum item_health_potion, 2),
+	]",
+
+	old_hax: "[  //give me all the powerups.
+		set(mana, 5000), 
+		;set_item_amount(enum item_heart_container, 6),
+
+		;set_item_amount(enum item_tongue_extension, 2),
+		;set_item_amount(enum item_greater_mana_talisman, 1),
+		;set_item_amount(enum item_lesser_mana_talisman, 1),
+//		;set_item_amount(enum item_creature_field_guide, 1),
+		;set_item_amount(enum item_magic_map, 1),
+		;add_item(enum item_acquirable_attractor, 1),
+
+
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
 		;add_item(enum item_acid_shot_talisman, 1),
@@ -479,6 +499,8 @@ properties: {
 
 		add_item(enum item_health_potion, 2),
 	]",
+
+
 
 #-------------------------- omnibus cheat codes --------------------------#
 	/*
