Proof of concept of caching the list of elements-derived-from-items.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -382,8 +382,17 @@ properties: {
 		#####-- item lists --#####
 	ability_list_full: "[InventoryItemType] :: map(filter(item_list_complete, value.item_category = enum primary_ability), value.id)",
 
-	element_list: "[ItemElementType] :: filter(map(filter(items_carried, value.item_category = enum core_element), value.item_element_type), value != null)",
+	element_list: "[ItemElementType] :: get_element_list(items_carried)",
 
+	_element_list_cache: { type: "object", init: "create_cache({name: 'element_list_cache'})" },
+
+	get_element_list: "def(	[class inventory_item] item_list) -> [ItemElementType]
+		query_cache(
+			_element_list_cache,
+			item_list, //items_carried
+			filter(map(filter(item_list, value.item_category = enum core_element), value.item_element_type), value != null)
+		)
+	",
 
 
 	regular_ability_list: "[InventoryItemType] :: [enum item_tongue] + map(regulars_available_to_player, value.id)
