Extended the caching to the regular ability list, which eliminates the perf hit we incurred.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -395,9 +395,20 @@ properties: {
 	",
 
 
-	regular_ability_list: "[InventoryItemType] :: [enum item_tongue] + map(regulars_available_to_player, value.id)
-		where regulars_available_to_player = filter( all_regular_abilities, value.item_element_type in elements_owned_by_player)
-		where all_regular_abilities = filter(item_list_complete, value.item_category = enum primary_ability)",
+	regular_ability_list: "[InventoryItemType] :: get_regular_ability_list(item_list_complete)",
+
+	_regular_ability_list_cache: { type: "object", init: "create_cache({name: 'element_list_cache'})" },
+
+	get_regular_ability_list: "def(	[class inventory_item] item_list) -> [InventoryItemType]
+		query_cache(
+			_element_list_cache,
+			item_list, //item_list_complete
+			[enum item_tongue] + map(regulars_available_to_player, value.id)
+				where regulars_available_to_player = filter( all_regular_abilities, value.item_element_type in elements_owned_by_player)
+				where all_regular_abilities = filter(item_list, value.item_category = enum primary_ability)
+			
+		)
+	",
 
 
 
