Set up the tongue to query which element the player currently has selected as their primary ability.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -397,7 +397,7 @@ properties: {
 
 	regular_ability_list: "[InventoryItemType] :: get_regular_ability_list(item_list_complete)",
 
-	_regular_ability_list_cache: { type: "object", init: "create_cache({name: 'element_list_cache'})" },
+	_regular_ability_list_cache: { type: "object", init: "create_cache({name: 'regular_ability_list_cache'})" },
 
 	get_regular_ability_list: "def(	[class inventory_item] item_list) -> [InventoryItemType]
 		query_cache(
@@ -418,9 +418,37 @@ properties: {
 		where supers_available_to_player = filter( all_super_abilities, value.item_element_type in elements_owned_by_player)
 		where all_super_abilities = filter(item_list_complete, value.item_category = enum super_ability)",
 
-	underwater_ability_list: "[InventoryItemType] :: [enum item_underwater_bubble_attack] + map(underwater_abilities_available_to_player, value.id)
-		where underwater_abilities_available_to_player = filter( all_underwater_abilities, value.item_element_type in elements_owned_by_player)
-		where all_underwater_abilities = filter(item_list_complete, value.item_category = enum underwater_ability)",
+
+
+	underwater_ability_list: "[InventoryItemType] :: get_underwater_ability_list(item_list_complete)",
+
+	_underwater_ability_list_cache: { type: "object", init: "create_cache({name: 'underwater_ability_cache'})" },
+
+	get_underwater_ability_list: "def(	[class inventory_item] item_list) -> [InventoryItemType]
+		query_cache(
+			_element_list_cache,
+			item_list, //item_list_complete
+			[enum item_underwater_bubble_attack] + map(underwater_abilities_available_to_player, value.id)
+				where underwater_abilities_available_to_player = filter( all_underwater_abilities, value.item_element_type in elements_owned_by_player)
+				where all_underwater_abilities = filter(item_list_complete, value.item_category = enum underwater_ability)
+			
+		)
+	",
+
+	current_ability_element: "ItemElementType :: get_item_element(current_ability)",
+
+	_item_element_cache: { type: "object", init: "create_cache({name: 'item_element_cache'})" },
+	
+	get_item_element: "def(	InventoryItemType the_item) -> ItemElementType
+		query_cache(
+			_item_element_cache,
+			the_item,
+			if( item_element != null,
+				item_element,
+				enum neutral
+			) where item_element = 	item_info(the_item).item_element_type	
+		)
+	",	
 
 
 
