--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -631,7 +631,8 @@ properties: {
 		4] rather than a startup cost, require the player to have at least > X mana to use the ability.  This differs from 2] in not actually consuming that startup cost, just requiring you to have it.
 	*/
 	attack: "def() -> commands 
-		if(is_currently_fat, extend_tongue, 
+		if(is_currently_fat,
+			extend_tongue, 
 			if(underwater,
 				switch(current_underwater_ability,
 					enum item_underwater_bubble_attack,			shoot_bubble,
@@ -652,10 +653,26 @@ properties: {
 			) 
 		)",
 		
-	spawn_tongue: "def(decimal angle) -> commands
-			[if(animation in ['stand', 'leave_crouch', 'walk', 'run', 'enter_lookup', 'lookup','skid', 'land'], animation('attack')),
-			if(animation in ['jump', 'fall', 'start_jump'], animation('jump_attack')),
-			spawn('frogatto_playable.tongue_tip', mid_x, mid_y -12, {facing: facing, _tongue_angle:angle, _frog: me}, [set(_tongue_tip, child)])]",
+	spawn_tongue: "def(decimal angle) -> commands [
+		if(animation in ['stand', 'leave_crouch', 'walk', 'run', 'enter_lookup', 'lookup','skid', 'land'],
+			animation('attack')
+		),
+		if(animation in ['jump', 'fall', 'start_jump'],
+			animation('jump_attack')
+		),
+		spawn('frogatto_playable.tongue_tip',
+			mid_x,
+			mid_y -12,
+			{
+				facing: facing,
+				_tongue_angle:angle, _frog: me,
+				element: current_ability_element,
+			},
+			[
+				set(_tongue_tip, child)
+			]
+		)
+	]",
 	
 	extend_tongue: "commands ::
 			if(ctrl_tongue_counter > 1 or (_tongue_tip != null), null,
@@ -3464,7 +3481,7 @@ object_type: [
 
 
 		#-------------------------- damage metadata --------------------------#
-			element: "AbiilityElementType :: enum fire",
+			element: { type: "AbiilityElementType", dynamic_initialization: true },
 			damage_type: "me.element",
 			damage_cooldown: "30",
 			attack_damage: "switch(element,
