--- a/data/types.cfg
+++ b/data/types.cfg
@@ -37,6 +37,7 @@
 			
 		*/
 	ItemElementType: "enum {
+		neutral,
 		fire,
 		ice,
 		energy,
@@ -47,6 +48,7 @@
 	AbiilityElementType: "enum {
 		neutral,
 		fire,
+		ice,
 		energy,
 		acid,
 		arcane
