Fixed bad choices of caching keys for the various ability lists.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -395,17 +395,17 @@ properties: {
 	",
 
 
-	regular_ability_list: "[InventoryItemType] :: get_regular_ability_list(item_list_complete)",
+	regular_ability_list: "[InventoryItemType] :: get_regular_ability_list(elements_owned_by_player)",
 
 	_regular_ability_list_cache: { type: "object", init: "create_cache({name: 'regular_ability_list_cache'})" },
 
-	get_regular_ability_list: "def(	[class inventory_item] item_list) -> [InventoryItemType]
+	get_regular_ability_list: "def(	[ItemElementType] element_list) -> [InventoryItemType]
 		query_cache(
-			_element_list_cache,
-			item_list, //item_list_complete
+			_regular_ability_list_cache,
+			element_list,
 			[enum item_tongue] + map(regulars_available_to_player, value.id)
-				where regulars_available_to_player = filter( all_regular_abilities, value.item_element_type in elements_owned_by_player)
-				where all_regular_abilities = filter(item_list, value.item_category = enum primary_ability)
+				where regulars_available_to_player = filter( all_regular_abilities, value.item_element_type in element_list)
+				where all_regular_abilities = filter(item_list_complete, value.item_category = enum primary_ability)
 			
 		)
 	",
@@ -420,16 +420,16 @@ properties: {
 
 
 
-	underwater_ability_list: "[InventoryItemType] :: get_underwater_ability_list(item_list_complete)",
+	underwater_ability_list: "[InventoryItemType] :: get_underwater_ability_list(elements_owned_by_player)",
 
 	_underwater_ability_list_cache: { type: "object", init: "create_cache({name: 'underwater_ability_cache'})" },
 
-	get_underwater_ability_list: "def(	[class inventory_item] item_list) -> [InventoryItemType]
+	get_underwater_ability_list: "def(	[ItemElementType] element_list) -> [InventoryItemType]
 		query_cache(
-			_element_list_cache,
-			item_list, //item_list_complete
+			_underwater_ability_list_cache,
+			element_list,
 			[enum item_underwater_bubble_attack] + map(underwater_abilities_available_to_player, value.id)
-				where underwater_abilities_available_to_player = filter( all_underwater_abilities, value.item_element_type in elements_owned_by_player)
+				where underwater_abilities_available_to_player = filter( all_underwater_abilities, value.item_element_type in element_list)
 				where all_underwater_abilities = filter(item_list_complete, value.item_category = enum underwater_ability)
 			
 		)
