--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -640,7 +640,8 @@ properties: {
 					enum item_underwater_fire_attack,			shoot_fire_blob,
 					enum item_underwater_energy_shock_attack,	shoot_underwater_shock_attack,
 				),
-				switch(current_ability,
+				extend_tongue
+				/*switch(current_ability,
 					enum item_tongue,							extend_tongue,
 					enum item_fire_breath_talisman,				mana_shock_guard(shoot_fire),
 					enum item_fire_shot_talisman,				mana_shock_guard(shoot_fire_shot),
@@ -649,7 +650,7 @@ properties: {
 					enum item_homing_shot_talisman,				mana_shock_guard(shoot_homing_shot),
 					enum item_acid_breath_talisman,				mana_shock_guard(shoot_acid),
 					enum item_ice_corona_talisman,				mana_shock_guard(shoot_ice_corona)
-				)
+				)*/
 			) 
 		)",
 		
