Put command execution for milgram's death_effects into multiple statements so that the first part (which does the fx and the removal of shots) has a chance to execute.

--- a/data/objects/enemies/bosses/milgram.cfg
+++ b/data/objects/enemies/bosses/milgram.cfg
@@ -49,9 +49,19 @@ properties: {
 		
 
 		handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands [
-				fire_event(controller, 'end_fight'),
 				spawn('explosion_big_recurring',  midpoint_x, midpoint_y, facing),
-				map(filter(level.chars, value.type in ['milgram_block', 'milgram.ground_slash', 'milgram.guided_missile', 'milgram.energy_shot']), remove_object(value)),
+				map(
+					filter(level.chars, value.type in [
+						'milgram_block',
+						'milgram.ground_slash',
+						'milgram.guided_missile',
+						'milgram.guided_missile_ring',
+						'milgram.energy_shot'
+					]),
+					remove_object(value)
+				),
+				;
+				fire_event(controller, 'end_fight'),
 		] where controller = get_object_or_die(level,'milgram_controller')",
 
 
