Fixed a plant which was upside-down in trembling-treetops.

--- a/data/level/Forest/trembling-treetops.cfg
+++ b/data/level/Forest/trembling-treetops.cfg
@@ -910,7 +910,7 @@
 			"custom": true,
 			"label": "_1bb251bf",
 			"property_data": {
-				"_hittable_attaches": ["@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')","@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')"]
+				"_hittable_attaches": ["@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')","@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')","@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')","@eval deserialize('07b2078b25f24b17825cf5c6e6dbc0df')","@eval deserialize('6eda772508fc4334a863677bc49f342f')"]
 			},
 			"type": "white_swaying_flower",
 			"x": 1647,
@@ -922,7 +922,7 @@
 			"custom": true,
 			"label": "_299a28f",
 			"property_data": {
-				"_hittable_attaches": ["@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')","@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')"]
+				"_hittable_attaches": ["@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')","@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')","@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')","@eval deserialize('a16903604cc44fe9956fcf4b2fbe8011')","@eval deserialize('7de8bd7c47104b3ca8873b66c1d92c47')"]
 			},
 			"type": "white_swaying_flower",
 			"x": 1405,
@@ -934,7 +934,7 @@
 			"custom": true,
 			"label": "_77b892dc",
 			"property_data": {
-				"_hittable_attaches": ["@eval deserialize('b7b6858bc992428399f26e26b3642bd3')","@eval deserialize('b7b6858bc992428399f26e26b3642bd3')"]
+				"_hittable_attaches": ["@eval deserialize('b7b6858bc992428399f26e26b3642bd3')","@eval deserialize('b7b6858bc992428399f26e26b3642bd3')","@eval deserialize('b7b6858bc992428399f26e26b3642bd3')","@eval deserialize('b7b6858bc992428399f26e26b3642bd3')","@eval deserialize('d94800d9f1e14c4885c363002d471e3e')"]
 			},
 			"type": "white_swaying_flower",
 			"upside_down": true,
@@ -947,7 +947,7 @@
 			"custom": true,
 			"label": "_1000f8fe",
 			"property_data": {
-				"_hittable_attaches": ["@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')","@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')"]
+				"_hittable_attaches": ["@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')","@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')","@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')","@eval deserialize('a1e0aac7d00f4eb5a83b62b1b129f9d8')","@eval deserialize('74863f356d0647518dbb1fe7e124e966')"]
 			},
 			"type": "white_swaying_flower",
 			"x": 1141,
@@ -959,7 +959,7 @@
 			"custom": true,
 			"label": "_66efe69a",
 			"property_data": {
-				"_hittable_attaches": ["@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')","@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')"]
+				"_hittable_attaches": ["@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')","@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')","@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')","@eval deserialize('bb89ecfaf9c642028da7a9633246e3ba')","@eval deserialize('8e6b35738aa740cfbfcf60294622775c')"]
 			},
 			"type": "white_swaying_flower",
 			"upside_down": true,
@@ -1329,8 +1329,9 @@
 				"original_level_we_spawned_on": "trembling-treetops.cfg"
 			},
 			"type": "forest_shooting_plant_huge",
-			"x": 3148,
-			"y": -1460
+			"upside_down": true,
+			"x": 3149,
+			"y": -1449
 		},
 		{
 			"_uuid": "76a20daa242e4b0eb415d80510b4e0eb",
@@ -1355,6 +1356,227 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
+			{
+				"_uuid": "07b2078b25f24b17825cf5c6e6dbc0df",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 37,
+				"label": "_65fe6a631271962698",
+				"parent": "deserialize('738a52b298a74ffd8f27e1223cc343ad')",
+				"relative_x": -2,
+				"relative_y": -36,
+				"rotate": 4.130142,
+				"time_in_frame": 12,
+				"type": "white_swaying_flower.head",
+				"x": 1656,
+				"y": -1545
+			},
+			{
+				"_uuid": "07b2078b25f24b17825cf5c6e6dbc0df",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 37,
+				"label": "_65fe6a6312719626981363158957",
+				"parent": "deserialize('738a52b298a74ffd8f27e1223cc343ad')",
+				"relative_x": -2,
+				"relative_y": -36,
+				"rotate": 4.130142,
+				"time_in_frame": 12,
+				"type": "white_swaying_flower.head",
+				"x": 1656,
+				"y": -1545
+			},
+			{
+				"_uuid": "6eda772508fc4334a863677bc49f342f",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_215c1fa0",
+				"parent": "deserialize('738a52b298a74ffd8f27e1223cc343ad')",
+				"relative_x": 9,
+				"relative_y": -134,
+				"rotate": -4.242636,
+				"type": "white_swaying_flower.head",
+				"x": 1602,
+				"y": -1388
+			},
+			{
+				"_uuid": "a16903604cc44fe9956fcf4b2fbe8011",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_2b33091a167039524",
+				"parent": "deserialize('998244d34184475ba5b41d516effb668')",
+				"relative_x": -45,
+				"relative_y": -45,
+				"type": "white_swaying_flower.head",
+				"x": 1360,
+				"y": 25
+			},
+			{
+				"_uuid": "a16903604cc44fe9956fcf4b2fbe8011",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_2b33091a167039524838201453",
+				"parent": "deserialize('998244d34184475ba5b41d516effb668')",
+				"relative_x": -45,
+				"relative_y": -45,
+				"type": "white_swaying_flower.head",
+				"x": 1360,
+				"y": 25
+			},
+			{
+				"_uuid": "7de8bd7c47104b3ca8873b66c1d92c47",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_3b075ef5",
+				"parent": "deserialize('998244d34184475ba5b41d516effb668')",
+				"relative_x": -45,
+				"relative_y": -45,
+				"type": "white_swaying_flower.head",
+				"x": 1360,
+				"y": 25
+			},
+			{
+				"_uuid": "b7b6858bc992428399f26e26b3642bd3",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_5357aab81909652018",
+				"parent": "deserialize('2516d21e3cf64bd09abea70d40d98804')",
+				"relative_x": -8,
+				"relative_y": 96,
+				"rotate": -5.65584,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 2843,
+				"y": -604
+			},
+			{
+				"_uuid": "b7b6858bc992428399f26e26b3642bd3",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_5357aab81909652018149161110",
+				"parent": "deserialize('2516d21e3cf64bd09abea70d40d98804')",
+				"relative_x": -8,
+				"relative_y": 96,
+				"rotate": -5.65584,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 2843,
+				"y": -604
+			},
+			{
+				"_uuid": "d94800d9f1e14c4885c363002d471e3e",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_76059e04",
+				"parent": "deserialize('2516d21e3cf64bd09abea70d40d98804')",
+				"relative_x": 9,
+				"relative_y": 134,
+				"rotate": 4.242636,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 2843,
+				"y": -604
+			},
+			{
+				"_uuid": "a1e0aac7d00f4eb5a83b62b1b129f9d8",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 26,
+				"label": "_2e4aca0f364986581",
+				"parent": "deserialize('8d9af3790ee94853899d29bedf960ee9')",
+				"relative_x": -6,
+				"relative_y": -117,
+				"rotate": 3.179508,
+				"time_in_frame": 1,
+				"type": "white_swaying_flower.head",
+				"x": 1151,
+				"y": -1723
+			},
+			{
+				"_uuid": "a1e0aac7d00f4eb5a83b62b1b129f9d8",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 26,
+				"label": "_2e4aca0f3649865811520234122",
+				"parent": "deserialize('8d9af3790ee94853899d29bedf960ee9')",
+				"relative_x": -6,
+				"relative_y": -117,
+				"rotate": 3.179508,
+				"time_in_frame": 1,
+				"type": "white_swaying_flower.head",
+				"x": 1151,
+				"y": -1723
+			},
+			{
+				"_uuid": "74863f356d0647518dbb1fe7e124e966",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_47f4e541",
+				"parent": "deserialize('8d9af3790ee94853899d29bedf960ee9')",
+				"relative_x": 9,
+				"relative_y": -134,
+				"rotate": -4.242636,
+				"type": "white_swaying_flower.head",
+				"x": 1096,
+				"y": -1642
+			},
+			{
+				"_uuid": "bb89ecfaf9c642028da7a9633246e3ba",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_2df880b",
+				"parent": "deserialize('df6e3d7fe6df4b6685c2a75743d12fde')",
+				"relative_x": 5,
+				"relative_y": 117,
+				"rotate": 2.630184,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 3475,
+				"y": -513
+			},
+			{
+				"_uuid": "bb89ecfaf9c642028da7a9633246e3ba",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_2df880b1728912134",
+				"parent": "deserialize('df6e3d7fe6df4b6685c2a75743d12fde')",
+				"relative_x": 5,
+				"relative_y": 117,
+				"rotate": 2.630184,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 3475,
+				"y": -513
+			},
+			{
+				"_uuid": "8e6b35738aa740cfbfcf60294622775c",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_7749976a",
+				"parent": "deserialize('df6e3d7fe6df4b6685c2a75743d12fde')",
+				"relative_x": 9,
+				"relative_y": 134,
+				"rotate": 4.242636,
+				"type": "white_swaying_flower.head",
+				"upside_down": true,
+				"x": 3475,
+				"y": -513
+			},
 			{
 				"_uuid": "bb89ecfaf9c642028da7a9633246e3ba",
 				"created": true,
@@ -1434,26 +1656,6 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_deep_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,,,,lfs,lfs,,lfs,lfs
@@ -1607,27 +1809,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_background_behind_trees"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_near_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
@@ -1770,16 +1952,6 @@
 			"y": -2656,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_solid_ground_tiles_overlays"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk
@@ -1970,67 +2142,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "foliage_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "near_player_foreground_effects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lef,,,,,lef
@@ -2122,26 +2234,6 @@ fug,fug,fug,fug,fug,fug
 			"y": -1632,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Trembling Treetops",
