Dummied out a do-nothing animation switch that's apparently consuming a great deal of CPU time.

--- a/data/objects/effects/attaches/light_source_attache.cfg
+++ b/data/objects/effects/attaches/light_source_attache.cfg
@@ -58,7 +58,7 @@ properties: {
 //on_process: "debug('light level at player', light_amount_at(level.player))",
 
 
-on_end_anim: "set(animation, animation)",		
+//on_end_anim: "set(animation, animation)",		
 			
 			
 animation: [{
