Cached the nth_item_away_from_current_item_of_category calculation as it's pretty complicated, but also is absolutely constant so long as our current items carried hasn't changed.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -472,7 +472,21 @@ properties: {
 
 	null_item: "class inventory_item :: find_or_die(item_list_complete, value.id = enum item_null)",
 
+
+
+
+	_nth_item_away_from_current_item_of_category_cache: { type: "object", init: "create_cache({name: 'nth_item_away_from_current_item_of_category_cache'})" },
+	
 	nth_item_away_from_current_item_of_category: "def(int offset, ItemCategory category) -> InventoryItemType
+		query_cache(
+			_nth_item_away_from_current_item_of_category_cache,
+			items_carried,
+			_nth_item_away_from_current_item_of_category( offset, category )
+		)
+	",	
+
+
+	_nth_item_away_from_current_item_of_category: "def(int offset, ItemCategory category) -> InventoryItemType
 		if(size(the_item_list) > 0 and the_current_item in the_item_list,
 									the_desired_item,
 									enum item_null
