--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -72,7 +72,7 @@
 			},
 		)",
 
-		has_just_changed: "bool :: player.last_toggled_ability = player.cycle - 1",  //We're putting this a frame in the past because I'm not sure we can consistently rely on the player object to execute before this object, and if we were ever in a situation where that happened, the flag wouldn't be set by the time we checked this (and the player's cycle would probably be updated even before its processing, so effectively this would get "missed".  Maybe - it being a bug is contingent on that second thing actually being true, but this way there's no bug either way.
+		has_just_changed: "bool :: player.last_toggled_ability = player.cycle - 1 or me.cycle = 1",  //We're putting this a frame in the past because I'm not sure we can consistently rely on the player object to execute before this object, and if we were ever in a situation where that happened, the flag wouldn't be set by the time we checked this (and the player's cycle would probably be updated even before its processing, so effectively this would get "missed".  Maybe - it being a bug is contingent on that second thing actually being true, but this way there's no bug either way.
 
 		do_carousel_anim: "commands :: 
 			map(graphic_cells, 
@@ -103,6 +103,25 @@
 			)
 		",
 
+#-------------------------- item info --------------------------#
+		item_info: "def(int offset) -> class inventory_item
+			(
+				player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, active_item_category) )
+
+				/*
+					There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
+				*/
+				where normalized_index =  offset - index(graphic_cells, graphic)
+			)",
+			
+		active_item_category: "
+			if(not player.is_super_attack_completely_viable_besides_mana_and_cooldowns,
+				if(not player.underwater,
+					enum primary_ability,
+					enum underwater_ability
+				),					
+				enum super_ability
+			)",
 
 #-------------------------- constructor/destructor --------------------------#
 		constructor: "[
@@ -144,35 +163,21 @@
 		if(player is obj frogatto_playable,
 			[
 				map(graphic_cells, [
-					set_to_animation(value, item_info(index).hud_img_rect ),
+					if(has_just_changed,
+						set_to_animation(value, item_info(index).hud_img_rect ),
+					),
 					set(value.brightness, 255/if( is_this_ability_enabled(index), 1, 3) ),
 				]),
 				
 				set(si_uniforms.speed, if(is_this_ability_enabled(0), 0.012, 0.004)),
 				set(si_uniforms.show_ants, player.is_super_attack_completely_viable_besides_mana_and_cooldowns),
 
+				
 				if(has_just_changed,
 					do_carousel_anim
-				),				
+				),
 			]
 				where is_this_ability_enabled = def(int ability_index) -> bool player.should_make_hud_graphic_look_enabled_for_this_item(item_info(ability_index).id)
-				where item_info = def(int offset) -> class inventory_item
-				(
-					player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, item_category) )
-
-					where item_category = if(not player.is_super_attack_completely_viable_besides_mana_and_cooldowns,
-						if(not player.underwater,
-							enum primary_ability,
-							enum underwater_ability
-						),					
-						enum super_ability
-					)
-
-					/*
-						There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
-					*/
-					where normalized_index =  offset - index(graphic_cells, graphic)
-				)
 
 				
 		) where si_uniforms = super_indicator.shader.uniform_commands asserting super_indicator.shader
